--- a/src/common/stylus/phonebr.styl
+++ b/src/common/stylus/phonebr.styl
@@ -14,6 +14,16 @@ html,body
         &:after 
             -webkit-transform: scaleY(0.5)
             transform: scaleY(0.5)
+ @media (-webkit-min-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5)
+    .border1pxtop
+        &:before 
+            -webkit-transform: scaleY(0.7)
+            transform: scaleY(0.7)
+ @media (-webkit-min-device-pixel-ratio: 2),(min-device-pixel-ratio: 2)
+    .border1pxtop
+        &:before 
+            -webkit-transform: scaleY(0.5)
+            transform: scaleY(0.5)
 
 
 .clearfix
